--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.4",
     "sass": "^1.56.0",
+    "sharp": "^0.31.2",
     "swiper": "^8.4.4"
   }
 }
